<!--
  ~ Copyright (c) 2022 nosqlbench
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <parent>
        <artifactId>mvn-defaults</artifactId>
        <groupId>io.nosqlbench</groupId>
        <version>4.17.12-SNAPSHOT</version>
        <relativePath>../mvn-defaults</relativePath>
    </parent>

    <artifactId>nb-docsapi</artifactId>
    <packaging>jar</packaging>
    <name>${project.artifactId}</name>
    <description>
        The docs API that is used by NoSQLBench.
        Include this into other modules via the nb-api dependency.
    </description>

    <dependencies>

        <dependency>
            <groupId>io.nosqlbench</groupId>
            <artifactId>nb-annotations</artifactId>
            <version>4.17.12-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>5.0.4</version>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-yaml-front-matter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-html2md-converter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <debug>true</debug>
                    <target>17</target>
                    <source>17</source>
                    <release>17</release>
                    <proc>none</proc>
                    <compilerArgs>
                        <arg>-proc:none</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <verbose>true</verbose>

                    <!--<compilerArgument>-Xdoclint:all</compilerArgument>-->
                    <!--                    <compilerArgument>-Xlint:all</compilerArgument>-->
                </configuration>
            </plugin>

        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>docs-for-testing-only/**</exclude>
                </excludes>
                <includes>
                    <include>**</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>
